--- a/.env.template
+++ b/.env.template
@@ -6,4 +6,8 @@ NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
 SESSION_SECRET=
 AUTOSWAP_BASE_URL=
 AUTOSWAP_API_KEY=
+NEXT_PUBLIC_REDEEM_BASE_URL=
 AUTHORIZED_MINTER_ETH_ADDRESS=
+OPI_API_KEY=
+NEXT_PUBLIC_MINIMUM_DEPOSIT_USD=
+NEXT_PUBLIC_MINIMUM_REDEEM_USD=
