--- a/.env.template
+++ b/.env.template
@@ -7,7 +7,7 @@ SESSION_SECRET=
 AUTOSWAP_BASE_URL=
 AUTOSWAP_API_KEY=
 NEXT_PUBLIC_REDEEM_BASE_URL=
-AUTHORIZED_MINTER_ETH_ADDRESS=
+OPI_BASE_URL=
 OPI_API_KEY=
 NEXT_PUBLIC_MINIMUM_DEPOSIT_USD=
 NEXT_PUBLIC_MINIMUM_REDEEM_USD=
